# Prism

./: .gitattributes  Cargo.toml  README.md  TODO.md
apps/web/: package-lock.json
crates/cli/: Cargo.toml  error.txt
crates/cli/src/: config.rs  main.rs  version_check.rs
crates/cli/src/commands/: auth.rs  clean.rs  db.rs  decode.rs  diagnostic.rs  diff.rs  export.rs  inspect.rs  mod.rs  profile.rs  replay.rs  serve.rs  trace.rs  whatif.rs
crates/cli/src/output/: auth_tree.rs  compact.rs  human.rs  mod.rs  renderers.rs  theme.rs  trace_tree.rs
crates/cli/src/tui/: app.rs  state.rs
crates/cli/src/tui/widgets/: controls.rs  inspector.rs  mod.rs  timeline.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/cache/: store.rs
crates/core/src/debugger/: breakpoint.rs
crates/core/src/decode/: context.rs  contract_error.rs  host_error.rs  mod.rs
crates/core/src/network/: archive.rs  config.rs  jsonrpc.rs  mod.rs  rpc.rs
crates/core/src/replay/: differ.rs  mod.rs  profiler.rs  sandbox.rs  state.rs
crates/core/src/spec/: decoder.rs
crates/core/src/taxonomy/: loader.rs  mod.rs
crates/core/src/types/: address.rs  config.rs  error.rs  mod.rs  trace.rs
crates/core/src/xdr/: codec.rs
patches/futures-macro-0.3.31/src/: executor.rs  join.rs  select.rs
